# scribe

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Layout2_OutcomesWall.html  PRODUCTION_CHECKLIST.md  README.md  apprunner.yaml  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  railway.toml  scribe_data_integration_spec_v1.docx  scribe_feature_spec.docx  scribe_new_features_spec.docx  sentry.client.config.ts  spec-1.md  spec-2.md  spec-new-features.md  tailwind.config.ts  turbo.json  vercel.json
ml-services/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
ml-services/alembic/: env.py
ml-services/alembic/versions/: 20260302_134133_481f5e08a28c_initial_schema.py  20260303_001_initial_schema.py  20260303_002_add_feedback_tables.py  20260303_003_add_training_jobs.py  20260304_005_add_privacy_ledger_fix.py  20260304_006_add_audit_enhancements.py  20260304_add_org_profile_fields.py
ml-services/config/: compliance_frameworks.yaml  industry_defaults.yaml  validation_dimensions.yaml
ml-services/docker/: Dockerfile  docker-compose.yml  prometheus.yml
ml-services/docs/: AWS_SETUP.md
ml-services/monitoring/: README.md
ml-services/monitoring/prometheus/: alerts.yml
ml-services/scripts/: seed_frameworks.py
ml-services/src/: __init__.py  main.py
ml-services/src/audit/: __init__.py  dual_logger.py  models.py  oracle.py  risk_tiers.py  router.py  schemas.py  service.py
ml-services/src/common/: __init__.py  celery_app.py  exceptions.py  metrics.py  redis.py
ml-services/src/feedback/: __init__.py  models.py  router.py  schemas.py  service.py  tasks.py
ml-services/src/matching/: __init__.py  confidence.py  correction_scorer.py  feedback.py  goal_embeddings.py  matcher.py  router.py  segment_detector.py  signals.py  types.py
ml-services/src/org_profile/: __init__.py  cache_events.py  enums.py  exceptions.py  industry_defaults.py  models.py  router.py  schemas.py
ml-services/src/privacy/: __init__.py  budget_tracker.py  dp_engine.py  grouping.py  router.py  schemas.py  synthesis.py
ml-services/src/registry/: __init__.py  models.py  router.py  schemas.py  service.py
ml-services/src/training/: __init__.py  ab_testing.py  canary.py  models.py  ray_client.py  router.py  schemas.py  service.py  tasks.py  train_runner.py  triggers.py
ml-services/terraform/: main.tf  variables.tf
ml-services/tests/: __init__.py  conftest.py  factories.py
ml-services/tests/audit/: test_oracle.py
(+1792 files in other folders)
